# poco

./: .gitignore  CMakeLists.txt  README  README.md  biicode.conf  ignore.bii
ApacheConnector/: CMakeLists.txt
CppParser/: CMakeLists.txt
CppUnit/: CMakeLists.txt
CppUnit/WinTestRunner/: CMakeLists.txt
Crypto/: CMakeLists.txt
Data/: CMakeLists.txt
Data/MySQL/: CMakeLists.txt
Data/ODBC/: CMakeLists.txt
Data/SQLite/: CMakeLists.txt
Foundation/: CMakeLists.txt
Foundation/include/Poco/: DeflatingStream.h  InflatingStream.h
Foundation/src/: Checksum.cpp  RegularExpression.cpp  Unicode.cpp
JSON/: CMakeLists.txt
MongoDB/: CMakeLists.txt
Net/: CMakeLists.txt
NetSSL_OpenSSL/: CMakeLists.txt
NetSSL_OpenSSL/include/Poco/Net/: AcceptCertificateHandler.h  CertificateHandlerFactory.h  CertificateHandlerFactoryMgr.h  ConsoleCertificateHandler.h  Context.h  HTTPSClientSession.h  HTTPSSessionInstantiator.h  HTTPSStreamFactory.h  InvalidCertificateHandler.h  KeyConsoleHandler.h  KeyFileHandler.h  NetSSL.h  PrivateKeyFactory.h  PrivateKeyFactoryMgr.h  PrivateKeyPassphraseHandler.h  RejectCertificateHandler.h  SSLException.h  SSLManager.h  SecureSMTPClientSession.h  SecureServerSocket.h  SecureServerSocketImpl.h  SecureSocketImpl.h  SecureStreamSocket.h  SecureStreamSocketImpl.h  Session.h  Utility.h  VerificationErrorArgs.h  X509Certificate.h
NetSSL_OpenSSL/samples/HTTPSTimeServer/src/: HTTPSTimeServer.cpp
NetSSL_OpenSSL/samples/Mail/src/: Mail.cpp
NetSSL_OpenSSL/samples/TwitterClient/src/: Twitter.cpp  Twitter.h
NetSSL_OpenSSL/samples/download/src/: download.cpp
NetSSL_OpenSSL/src/: AcceptCertificateHandler.cpp  CertificateHandlerFactory.cpp  CertificateHandlerFactoryMgr.cpp  ConsoleCertificateHandler.cpp  Context.cpp  HTTPSClientSession.cpp  HTTPSSessionInstantiator.cpp  HTTPSStreamFactory.cpp  InvalidCertificateHandler.cpp  KeyConsoleHandler.cpp  KeyFileHandler.cpp  PrivateKeyFactory.cpp  PrivateKeyFactoryMgr.cpp  PrivateKeyPassphraseHandler.cpp  RejectCertificateHandler.cpp  SSLException.cpp  SSLManager.cpp  SecureSMTPClientSession.cpp  SecureServerSocket.cpp  SecureServerSocketImpl.cpp  SecureSocketImpl.cpp  SecureStreamSocket.cpp  SecureStreamSocketImpl.cpp  Session.cpp  Utility.cpp  VerificationErrorArgs.cpp  X509Certificate.cpp
NetSSL_OpenSSL/testsuite/src/: Driver.cpp  HTTPSClientSessionTest.cpp  HTTPSClientSessionTest.h  HTTPSServerTest.cpp  HTTPSServerTest.h  HTTPSStreamFactoryTest.cpp  HTTPSStreamFactoryTest.h  HTTPSTestServer.cpp  HTTPSTestServer.h  TCPServerTest.cpp  TCPServerTest.h  WinCEDriver.cpp  WinDriver.cpp
NetSSL_Win/: CMakeLists.txt
NetSSL_Win/include/Poco/Net/: AcceptCertificateHandler.h  AutoSecBufferDesc.h  CertificateHandlerFactory.h  CertificateHandlerFactoryMgr.h  ConsoleCertificateHandler.h  Context.h  HTTPSClientSession.h  HTTPSSessionInstantiator.h  HTTPSStreamFactory.h  InvalidCertificateHandler.h  KeyConsoleHandler.h  KeyFileHandler.h  NetSSL.h  PrivateKeyFactory.h  PrivateKeyFactoryMgr.h  PrivateKeyPassphraseHandler.h  RejectCertificateHandler.h  SSLException.h  SSLManager.h  SecureSMTPClientSession.h  SecureServerSocket.h  SecureServerSocketImpl.h  SecureSocketImpl.h  SecureStreamSocket.h  SecureStreamSocketImpl.h  Session.h  Utility.h  VerificationErrorArgs.h  X509Certificate.h
NetSSL_Win/samples/HTTPSTimeServer/src/: HTTPSTimeServer.cpp
NetSSL_Win/samples/Mail/src/: Mail.cpp
NetSSL_Win/samples/download/src/: download.cpp
NetSSL_Win/src/: AcceptCertificateHandler.cpp  CertificateHandlerFactory.cpp  CertificateHandlerFactoryMgr.cpp  ConsoleCertificateHandler.cpp  Context.cpp  HTTPSClientSession.cpp  HTTPSSessionInstantiator.cpp  HTTPSStreamFactory.cpp  InvalidCertificateHandler.cpp  KeyConsoleHandler.cpp  KeyFileHandler.cpp  PrivateKeyFactory.cpp  PrivateKeyFactoryMgr.cpp  PrivateKeyPassphraseHandler.cpp  RejectCertificateHandler.cpp  SSLException.cpp  SSLManager.cpp  SecureSMTPClientSession.cpp  SecureServerSocket.cpp  SecureServerSocketImpl.cpp  SecureSocketImpl.cpp  SecureStreamSocket.cpp  SecureStreamSocketImpl.cpp  Session.cpp  Utility.cpp  VerificationErrorArgs.cpp  X509Certificate.cpp
NetSSL_Win/testsuite/src/: Driver.cpp  HTTPSClientSessionTest.cpp  HTTPSServerTest.cpp  HTTPSStreamFactoryTest.cpp  HTTPSTestServer.cpp  HTTPSTestServer.h  TCPServerTest.cpp  WinCEDriver.cpp  WinDriver.cpp
PDF/: CMakeLists.txt
PocoDoc/resources/css/: styles.css
SevenZip/: CMakeLists.txt
Util/: CMakeLists.txt
XML/: CMakeLists.txt
Zip/: CMakeLists.txt
Zip/src/: ZipStream.cpp
biicode/: README.md
biicode/cmake/: BiiPocoMacros.cmake  Foundation.cmake  biicode.cmake
biicode/conf/: biicode.conf  ignore.bii
biicode/scripts/: post_process_hook.py
cmake/: BiiPocoMacros.cmake
